[package]
name = "snaferrous"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[profile.release]
opt-level ="z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
